# agent-core

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
agent_core/: __init__.py
agent_core/adapters/: __init__.py  engineering_loop.py  knowledge.py  noc_agent.py
agent_core/collector/: __init__.py  __main__.py  app.py  db.py
agent_core/contracts/: __init__.py  _base.py  approval.py  context.py  decision.py  errors.py  evidence.py  feedback.py  graph.py  models.py  observatory.py  state.py  task.py  tools.py  tracing.py
agent_core/contracts/graphs/: engineering-loop.draft.graph.yaml  knowledge.draft.graph.yaml  noc-agent.draft.graph.yaml
agent_core/contracts/schemas/: ActorRef.schema.json  AgentState.schema.json  AuditEvent.schema.json  CaseSummary.schema.json  ChangeImpactReport.schema.json  ChangeRef.schema.json  CostUsage.schema.json  DecisionPacket.schema.json  EdgeSpec.schema.json  ErrorEnvelope.schema.json  EvidencePacket.schema.json  FeedbackEvent.schema.json  GraphSpec.schema.json  HandoffSummary.schema.json  HumanApprovalDecision.schema.json  HumanApprovalRequest.schema.json  ImpactWindow.schema.json  KnowledgeArtifactSummary.schema.json  LoopDescriptor.schema.json  LoopRuntimeSnapshot.schema.json  LoopTopology.schema.json  MetricDelta.schema.json  ModelPolicy.schema.json  (+21 more)
agent_core/tracing/: __init__.py  sink.py
docs/: distribution.md
scripts/: export_schemas.py
tests/: conftest.py
tests/adapters/: test_engineering_adapter.py  test_knowledge_adapter.py  test_noc_adapter.py
tests/collector/: test_collector.py
tests/contracts/: test_graphspecs_parse.py  test_invalid_rejection.py  test_json_roundtrip.py  test_no_heavy_imports.py  test_observatory_contracts.py  test_schema_validation.py
tests/schemas/: test_schema_export.py
tests/tracing/: test_sink.py
(+7 files in other folders)
