[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-core"
version = "0.2.0"
description = "Shared typed contracts for the AS215932 Agent Runtime Framework (Phase 1 / §31 safe milestone)."
requires-python = ">=3.11"
dependencies = ["pydantic>=2,<3"]

[project.optional-dependencies]
dev = ["pytest>=8", "pyyaml>=6", "ruff>=0.5", "mypy>=1.8", "types-PyYAML"]

[tool.hatch.build.targets.wheel]
packages = ["agent_core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_redundant_casts = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
